# crabmusic

./: .clippy.toml  .gitignore  ANTI-ALIASING-UPGRADE.md  BRAILLE-OSCILLOSCOPE.md  BRAILLE-UPGRADE.md  CUSTOMIZATION-POSSIBILITIES.md  Cargo.toml  DSP-004-COMPLETION-SUMMARY.md  HISTORY-TV-CHANNEL.md  HISTORY-TV-SETUP.md  HUMAN_INSTRUCTIONS.md  IMPLEMENTATION-COMPLETE.md  IMPLEMENTATION-REPORT.md  LICENSE  QUICK-HOOKUP-GUIDE.md  README.md  SACRED-GEOMETRY-IMPLEMENTATION.md  SPECTRUM-CALIBRATION-GUIDE.md  STORY-GENERATION-PLAN.md  TESTING.md  VISUALIZER-IMPROVEMENTS-SUMMARY.md  WSL-AUDIO-SETUP.md  ZERO-SMOOTHING-CHANGES.md  config.default.yaml  config.yaml  rustfmt.toml  test-sacred-geometry.ps1
.bmad-core/: install-manifest.yaml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
benches/: fft_benchmark.rs  render_benchmark.rs  ring_buffer_benchmark.rs
config/: default.yaml
crabcrust-complete/: Cargo.toml  DEPLOY.md  INSTALL.md  README.md  STATUS.md  SUMMARY.md  crabcrust.json  crabcrust.nuspec  install.ps1  install.sh
crabcrust-complete/examples/: custom_animation.rs  git_wrapper.rs  test_braille_no_terminal.rs  visualize_animations.rs
crabcrust-complete/src/: lib.rs  main.rs
crabcrust-complete/src/animation/: mod.rs  rocket.rs  save.rs  spinner.rs
crabcrust-complete/src/braille/: mod.rs
crabcrust-complete/src/executor/: mod.rs
crabcrust-complete/src/rendering/: mod.rs
crabcrust-complete/src/wrapper/: git.rs  mod.rs
docs/: AUDIO_CAPTURE.md  WINDOWS_SETUP.md  architecture.md  brainstorming-session-results.md  implementation-plan.md
docs/architecture/: README.md  coding-standards.md  source-tree.md  tech-stack.md
docs/stories/: AUDIO-001-audio-capture-trait.md  AUDIO-002-cpal-implementation.md  AUDIO-003-ring-buffer.md  DSP-001-fft-processor.md  DSP-002-frequency-bands.md  DSP-004-beat-detection.md  DSP-005-spectral-flux-beat-detection.md  DSP-006-tempo-detection-bpm.md  DSP-007-multi-band-beat-detection.md  EFFECTS-003-bloom-effect.md  FIXES-APPLIED.md  README.md  (+32 more)
examples/: README.md  aa_demo.rs  config.bass-heavy.yaml  config.classical.yaml  config.minimal.yaml  config.performance.yaml  config.quality.yaml  flower_of_life_demo.rs  gltf_viewer.rs  illuminati_audio_reactive.rs  illuminati_braille.rs  insult_fireworks.rs  mandala_demo.rs  model_browser.rs  night_night.rs  ouroboros.rs  quantum_donut.rs  ray_tracer_demo.rs  sacred_geometry_demo.rs  test_braille_oscilloscope.rs  white_rabbit.rs
models/: snake_head_1.mtl
src/: error.rs  lib.rs  main.rs
target-test/: .rustc_info.json
tests/: audio_integration_tests.rs  beat_detection_integration_test.rs  dsp_synthetic_tests.rs  gltf_loading_test.rs  oscilloscope_integration_test.rs  ray_tracer_modes_test.rs  ray_tracer_test.rs
(+670 files in other folders)
